# mldebug

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/mldebug/: __init__.py  _example.py  api.py  config.py  registry.py  scoring.py  types.py  validation.py
src/mldebug/api/: __init__.py
src/mldebug/checks/: __init__.py  base.py  ks.py  missing_values.py  psi.py
src/mldebug/checks/categorical/: __init__.py  missing_values.py  psi.py  unseen.py  unseen_categories.py  unseen_values.py
src/mldebug/checks/data_quality/: missing_values.py
src/mldebug/checks/drift/: detector.py  ks.py  psi.py
src/mldebug/checks/numeric/: __init__.py  ks_test.py  missing_values.py  range_anomaly.py  variance_drift.py
src/mldebug/core/: __init__.py  config.py  feature.py  issue.py  report.py  schema.py
src/mldebug/core/models/: __init__.py  context.py
src/mldebug/core/pipeline/: feature_engine.py  filtering.py  runner.py  schema.py
src/mldebug/core/registry/: __init__.py  checks.py
src/mldebug/detectors/: categorical.py  numeric.py
src/mldebug/domain/: feature_type.py  issue.py  report.py  severity.py
src/mldebug/inference/: feature_type.py  schema.py
src/mldebug/models/: context.py  feature_context.py  issue.py  report.py  types.py
src/mldebug/normalizers/: categorical.py  numeric.py
src/mldebug/pipeline/: __init__.py  checks.py  context.py  feature_checks.py  feature_engine.py  filtering.py  input_validation.py  normalization_service.py  runner.py  schema.py  schema_analysis.py
src/mldebug/preprocessing/: __init__.py  heuristics.py  normalization.py  shared.py
src/mldebug/protocols/: check.py  feature_detector.py  normalizer.py
src/mldebug/registry/: __init__.py  checks.py  specs.py
src/mldebug/runtime/: feature_context.py  feature_spec.py
src/mldebug/utils/: stats.py
tests/: test_api.py  test_example.py  test_public_api.py
tests/api/: test_api.py
tests/benchmarks/: test_run_checks.py
tests/checks/: test_ks.py  test_missing_values.py  test_psi.py
tests/checks/categorical/: test_missing_values.py  test_psi.py
tests/checks/data_quality/: test_missing_values.py
tests/checks/drift/: test_detector.py  test_ks.py  test_missing_values.py  test_psi.py
tests/checks/numeric/: test_ks_test.py  test_missing_values.py
tests/core/: test_feature.py  test_issue.py  test_report.py
tests/core/models/: test_report.py
tests/datasets/: tabular.py  test_tabular.py
tests/drift/: test_detector.py
tests/e2e/: test_large_dataset.py  test_memory_limit.py  test_performance_benchmark.py  test_run_checks_benchmark.py  test_run_checks_memory.py
tests/factories/: data.py  test_data.py
tests/fixtures/: data.py  datasets.py  generators.py  missing_values.py
tests/fixtures/data/: datasets.py  missing_values.py
tests/integration/: test_check_pipeline_end_to_end.py  test_list_checks.py  test_run_checks.py  test_validation_pipeline_end_to_end.py
tests/performance/: test_check_pipeline_latency.py  test_check_pipeline_memory.py  test_run_checks.py  test_validation_pipeline_latency.py  test_validation_pipeline_memory.py
tests/preprocessing/: test_normalization.py
tests/stress/: test_datasets.py  test_run_checks.py
tests/unit/: test_api.py  test_categorical_missing.py  test_generators.py  test_init.py  test_numeric_ks.py  test_numeric_missing.py  test_scoring.py  test_tabular_dataset.py
tests/unit/checks/: test_categorical_missing_values.py  test_categorical_psi.py  test_categorical_unseen_categories.py  test_categorical_unseen_values.py  test_numeric_ks_test.py  test_numeric_missing_values.py  test_numeric_range_anomaly.py  test_numeric_variance_drift.py
tests/unit/checks/categorical/: test_missing_values.py  test_psi.py  test_unseen.py  test_unseen_values.py
tests/unit/checks/numeric/: test_ks_test.py  test_missing_values.py  test_variance_drift.py
tests/unit/core/models/: test_issue.py  test_report.py
tests/unit/core/pipeline/: test_filtering.py  test_schema.py
tests/unit/domain/: test_issue.py  test_report.py
tests/unit/fixtures/: test_datasets.py  test_generators.py  test_missing_values.py
tests/unit/fixtures/data/: test_datasets.py  test_generators.py  test_missing_values.py
tests/unit/inference/: test_feature_type.py  test_schema.py
tests/unit/models/: test_issue.py  test_report.py
tests/unit/pipeline/: test_feature_checks.py  test_filtering.py  test_input_validation.py  test_runner.py  test_schema_analysis.py
tests/unit/preprocessing/: test_heuristics.py  test_normalization.py
tests/utils/: test_stats.py
